@@ -2,3 +2,21 @@
 
 
 An R package for the teaching of statistics, created at Georgetown College in Kentucky, USA.
+
+## Installation
+
+You can download the package from CRAN:
+
+```
+install.packages("tigerstats")
+```
+
+or the latest version from Git Hub by first installing package `devtools` from CRAN and then running:
+
+```
+devtools::install_github("homerhanumat/tigerstats",build_vignettes=TRUE)
+```
+
+## More Information
+
+Begin with the package vignette "Teaching with Tigerstats."
