@@ -1,0 +1,186 @@
+<!DOCTYPE html>
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+
+<meta charset="utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="generator" content="pandoc" />
+
+
+
+<title>Teaching with Tigerstats</title>
+
+
+
+<style type="text/css">code{white-space: pre;}</style>
+<style type="text/css">
+table.sourceCode, tr.sourceCode, td.lineNumbers, td.sourceCode {
+  margin: 0; padding: 0; vertical-align: baseline; border: none; }
+table.sourceCode { width: 100%; line-height: 100%; }
+td.lineNumbers { text-align: right; padding-right: 4px; padding-left: 4px; color: #aaaaaa; border-right: 1px solid #aaaaaa; }
+td.sourceCode { padding-left: 5px; }
+code > span.kw { color: #007020; font-weight: bold; }
+code > span.dt { color: #902000; }
+code > span.dv { color: #40a070; }
+code > span.bn { color: #40a070; }
+code > span.fl { color: #40a070; }
+code > span.ch { color: #4070a0; }
+code > span.st { color: #4070a0; }
+code > span.co { color: #60a0b0; font-style: italic; }
+code > span.ot { color: #007020; }
+code > span.al { color: #ff0000; font-weight: bold; }
+code > span.fu { color: #06287e; }
+code > span.er { color: #ff0000; font-weight: bold; }
+</style>
+<style type="text/css">
+  pre:not([class]) {
+    background-color: white;
+  }
+</style>
+
+
+<link href="data:text/css,body%20%7B%0A%20%20background%2Dcolor%3A%20%23fff%3B%0A%20%20margin%3A%201em%20auto%3B%0A%20%20max%2Dwidth%3A%20700px%3B%0A%20%20overflow%3A%20visible%3B%0A%20%20padding%2Dleft%3A%202em%3B%0A%20%20padding%2Dright%3A%202em%3B%0A%20%20font%2Dfamily%3A%20%22Open%20Sans%22%2C%20%22Helvetica%20Neue%22%2C%20Helvetica%2C%20Arial%2C%20sans%2Dserif%3B%0A%20%20font%2Dsize%3A%2014px%3B%0A%20%20line%2Dheight%3A%201%2E35%3B%0A%7D%0A%0A%23header%20%7B%0A%20%20text%2Dalign%3A%20center%3B%0A%7D%0A%0A%23TOC%20%7B%0A%20%20clear%3A%20both%3B%0A%20%20margin%3A%200%200%2010px%2010px%3B%0A%20%20padding%3A%204px%3B%0A%20%20width%3A%20400px%3B%0A%20%20border%3A%201px%20solid%20%23CCCCCC%3B%0A%20%20border%2Dradius%3A%205px%3B%0A%0A%20%20background%2Dcolor%3A%20%23f6f6f6%3B%0A%20%20font%2Dsize%3A%2013px%3B%0A%20%20line%2Dheight%3A%201%2E3%3B%0A%7D%0A%20%20%23TOC%20%2Etoctitle%20%7B%0A%20%20%20%20font%2Dweight%3A%20bold%3B%0A%20%20%20%20font%2Dsize%3A%2015px%3B%0A%20%20%20%20margin%2Dleft%3A%205px%3B%0A%20%20%7D%0A%0A%20%20%23TOC%20ul%20%7B%0A%20%20%20%20padding%2Dleft%3A%2040px%3B%0A%20%20%20%20margin%2Dleft%3A%20%2D1%2E5em%3B%0A%20%20%20%20margin%2Dtop%3A%205px%3B%0A%20%20%20%20margin%2Dbottom%3A%205px%3B%0A%20%20%7D%0A%20%20%23TOC%20ul%20ul%20%7B%0A%20%20%20%20margin%2Dleft%3A%20%2D2em%3B%0A%20%20%7D%0A%20%20%23TOC%20li%20%7B%0A%20%20%20%20line%2Dheight%3A%2016px%3B%0A%20%20%7D%0A%0Atable%20%7B%0A%20%20margin%3A%201em%20auto%3B%0A%20%20border%2Dwidth%3A%201px%3B%0A%20%20border%2Dcolor%3A%20%23DDDDDD%3B%0A%20%20border%2Dstyle%3A%20outset%3B%0A%20%20border%2Dcollapse%3A%20collapse%3B%0A%7D%0Atable%20th%20%7B%0A%20%20border%2Dwidth%3A%202px%3B%0A%20%20padding%3A%205px%3B%0A%20%20border%2Dstyle%3A%20inset%3B%0A%7D%0Atable%20td%20%7B%0A%20%20border%2Dwidth%3A%201px%3B%0A%20%20border%2Dstyle%3A%20inset%3B%0A%20%20line%2Dheight%3A%2018px%3B%0A%20%20padding%3A%205px%205px%3B%0A%7D%0Atable%2C%20table%20th%2C%20table%20td%20%7B%0A%20%20border%2Dleft%2Dstyle%3A%20none%3B%0A%20%20border%2Dright%2Dstyle%3A%20none%3B%0A%7D%0Atable%20thead%2C%20table%20tr%2Eeven%20%7B%0A%20%20background%2Dcolor%3A%20%23f7f7f7%3B%0A%7D%0A%0Ap%20%7B%0A%20%20margin%3A%200%2E5em%200%3B%0A%7D%0A%0Ablockquote%20%7B%0A%20%20background%2Dcolor%3A%20%23f6f6f6%3B%0A%20%20padding%3A%200%2E25em%200%2E75em%3B%0A%7D%0A%0Ahr%20%7B%0A%20%20border%2Dstyle%3A%20solid%3B%0A%20%20border%3A%20none%3B%0A%20%20border%2Dtop%3A%201px%20solid%20%23777%3B%0A%20%20margin%3A%2028px%200%3B%0A%7D%0A%0Adl%20%7B%0A%20%20margin%2Dleft%3A%200%3B%0A%7D%0A%20%20dl%20dd%20%7B%0A%20%20%20%20margin%2Dbottom%3A%2013px%3B%0A%20%20%20%20margin%2Dleft%3A%2013px%3B%0A%20%20%7D%0A%20%20dl%20dt%20%7B%0A%20%20%20%20font%2Dweight%3A%20bold%3B%0A%20%20%7D%0A%0Aul%20%7B%0A%20%20margin%2Dtop%3A%200%3B%0A%7D%0A%20%20ul%20li%20%7B%0A%20%20%20%20list%2Dstyle%3A%20circle%20outside%3B%0A%20%20%7D%0A%20%20ul%20ul%20%7B%0A%20%20%20%20margin%2Dbottom%3A%200%3B%0A%20%20%7D%0A%0Apre%2C%20code%20%7B%0A%20%20background%2Dcolor%3A%20%23f7f7f7%3B%0A%20%20border%2Dradius%3A%203px%3B%0A%20%20color%3A%20%23333%3B%0A%7D%0Apre%20%7B%0A%20%20white%2Dspace%3A%20pre%2Dwrap%3B%20%20%20%20%2F%2A%20Wrap%20long%20lines%20%2A%2F%0A%20%20border%2Dradius%3A%203px%3B%0A%20%20margin%3A%205px%200px%2010px%200px%3B%0A%20%20padding%3A%2010px%3B%0A%7D%0Apre%3Anot%28%5Bclass%5D%29%20%7B%0A%20%20background%2Dcolor%3A%20%23f7f7f7%3B%0A%7D%0A%0Acode%20%7B%0A%20%20font%2Dfamily%3A%20Consolas%2C%20Monaco%2C%20%27Courier%20New%27%2C%20monospace%3B%0A%20%20font%2Dsize%3A%2085%25%3B%0A%7D%0Ap%20%3E%20code%2C%20li%20%3E%20code%20%7B%0A%20%20padding%3A%202px%200px%3B%0A%7D%0A%0Adiv%2Efigure%20%7B%0A%20%20text%2Dalign%3A%20center%3B%0A%7D%0Aimg%20%7B%0A%20%20background%2Dcolor%3A%20%23FFFFFF%3B%0A%20%20padding%3A%202px%3B%0A%20%20border%3A%201px%20solid%20%23DDDDDD%3B%0A%20%20border%2Dradius%3A%203px%3B%0A%20%20border%3A%201px%20solid%20%23CCCCCC%3B%0A%20%20margin%3A%200%205px%3B%0A%7D%0A%0Ah1%20%7B%0A%20%20margin%2Dtop%3A%200%3B%0A%20%20font%2Dsize%3A%2035px%3B%0A%20%20line%2Dheight%3A%2040px%3B%0A%7D%0A%0Ah2%20%7B%0A%20%20border%2Dbottom%3A%204px%20solid%20%23f7f7f7%3B%0A%20%20padding%2Dtop%3A%2010px%3B%0A%20%20padding%2Dbottom%3A%202px%3B%0A%20%20font%2Dsize%3A%20145%25%3B%0A%7D%0A%0Ah3%20%7B%0A%20%20border%2Dbottom%3A%202px%20solid%20%23f7f7f7%3B%0A%20%20padding%2Dtop%3A%2010px%3B%0A%20%20font%2Dsize%3A%20120%25%3B%0A%7D%0A%0Ah4%20%7B%0A%20%20border%2Dbottom%3A%201px%20solid%20%23f7f7f7%3B%0A%20%20margin%2Dleft%3A%208px%3B%0A%20%20font%2Dsize%3A%20105%25%3B%0A%7D%0A%0Ah5%2C%20h6%20%7B%0A%20%20border%2Dbottom%3A%201px%20solid%20%23ccc%3B%0A%20%20font%2Dsize%3A%20105%25%3B%0A%7D%0A%0Aa%20%7B%0A%20%20color%3A%20%230033dd%3B%0A%20%20text%2Ddecoration%3A%20none%3B%0A%7D%0A%20%20a%3Ahover%20%7B%0A%20%20%20%20color%3A%20%236666ff%3B%20%7D%0A%20%20a%3Avisited%20%7B%0A%20%20%20%20color%3A%20%23800080%3B%20%7D%0A%20%20a%3Avisited%3Ahover%20%7B%0A%20%20%20%20color%3A%20%23BB00BB%3B%20%7D%0A%20%20a%5Bhref%5E%3D%22http%3A%22%5D%20%7B%0A%20%20%20%20text%2Ddecoration%3A%20underline%3B%20%7D%0A%20%20a%5Bhref%5E%3D%22https%3A%22%5D%20%7B%0A%20%20%20%20text%2Ddecoration%3A%20underline%3B%20%7D%0A%0A%2F%2A%20Class%20described%20in%20https%3A%2F%2Fbenjeffrey%2Ecom%2Fposts%2Fpandoc%2Dsyntax%2Dhighlighting%2Dcss%0A%20%20%20Colours%20from%20https%3A%2F%2Fgist%2Egithub%2Ecom%2Frobsimmons%2F1172277%20%2A%2F%0A%0Acode%20%3E%20span%2Ekw%20%7B%20color%3A%20%23555%3B%20font%2Dweight%3A%20bold%3B%20%7D%20%2F%2A%20Keyword%20%2A%2F%0Acode%20%3E%20span%2Edt%20%7B%20color%3A%20%23902000%3B%20%7D%20%2F%2A%20DataType%20%2A%2F%0Acode%20%3E%20span%2Edv%20%7B%20color%3A%20%2340a070%3B%20%7D%20%2F%2A%20DecVal%20%28decimal%20values%29%20%2A%2F%0Acode%20%3E%20span%2Ebn%20%7B%20color%3A%20%23d14%3B%20%7D%20%2F%2A%20BaseN%20%2A%2F%0Acode%20%3E%20span%2Efl%20%7B%20color%3A%20%23d14%3B%20%7D%20%2F%2A%20Float%20%2A%2F%0Acode%20%3E%20span%2Ech%20%7B%20color%3A%20%23d14%3B%20%7D%20%2F%2A%20Char%20%2A%2F%0Acode%20%3E%20span%2Est%20%7B%20color%3A%20%23d14%3B%20%7D%20%2F%2A%20String%20%2A%2F%0Acode%20%3E%20span%2Eco%20%7B%20color%3A%20%23888888%3B%20font%2Dstyle%3A%20italic%3B%20%7D%20%2F%2A%20Comment%20%2A%2F%0Acode%20%3E%20span%2Eot%20%7B%20color%3A%20%23007020%3B%20%7D%20%2F%2A%20OtherToken%20%2A%2F%0Acode%20%3E%20span%2Eal%20%7B%20color%3A%20%23ff0000%3B%20font%2Dweight%3A%20bold%3B%20%7D%20%2F%2A%20AlertToken%20%2A%2F%0Acode%20%3E%20span%2Efu%20%7B%20color%3A%20%23900%3B%20font%2Dweight%3A%20bold%3B%20%7D%20%2F%2A%20Function%20calls%20%2A%2F%20%0Acode%20%3E%20span%2Eer%20%7B%20color%3A%20%23a61717%3B%20background%2Dcolor%3A%20%23e3d2d2%3B%20%7D%20%2F%2A%20ErrorTok%20%2A%2F%0A%0A" rel="stylesheet" type="text/css" />
+
+</head>
+
+<body>
+
+
+
+<div id="header">
+<h1 class="title">Teaching with Tigerstats</h1>
+</div>
+
+<div id="TOC">
+<ul>
+<li><a href="#preliminaries">Preliminaries</a></li>
+<li><a href="#package-requirements">Package Requirements</a></li>
+<li><a href="#basic-routines">Basic Routines</a></li>
+<li><a href="#getting-help">Getting Help</a></li>
+<li><a href="#applets">Applets</a><ul>
+<li><a href="#shiny-apps">Shiny Apps</a></li>
+<li><a href="#manipulate-apps">Manipulate Apps</a></li>
+<li><a href="#other-apps">Other Apps</a></li>
+</ul></li>
+<li><a href="#general-reference">General Reference</a></li>
+</ul>
+</div>
+
+<div id="preliminaries" class="section level1">
+<h1>Preliminaries</h1>
+<p>We assume that the instructor is familiar with R, and has a basic understanding of the <code>mosaic</code> package and its use in the teaching of statistics. Consult, e.g., the <code>mosaic</code> vignette “Start Teaching Statistics Using R.”</p>
+</div>
+<div id="package-requirements" class="section level1">
+<h1>Package Requirements</h1>
+<p>In its current version package <code>tigerstats</code> depends on the packages <code>mosaic</code>, <code>mosaicData</code>and <code>abd</code>. All of these will be attached when one attaches <code>tigerstats</code>:</p>
+<pre class="sourceCode r"><code class="sourceCode r"><span class="kw">library</span>(tigerstats)</code></pre>
+</div>
+<div id="basic-routines" class="section level1">
+<h1>Basic Routines</h1>
+<p><code>tigerstats</code> is used in an elementary classroom setting where students are taught to choose descriptive and inferential methods based upon an analysis of the variables that pertain to a question of interest. Thus if a student finds that she is interested in the relationship between two factor variables, then she knows that she can examine the question descriptively using bar charts, two-way tables, etc., whereas histograms, density plots and the like are not appropriate. The vignettes:</p>
+<ul>
+<li><em>R: Descriptive Statistics</em></li>
+<li><em>R: Inferential Statistics</em></li>
+</ul>
+<p>serve for students as a reminder of which procedures are appropriate for various types of questions about data (descriptive) or the population/processe from which the data is derived (inferential). Prospective instructors should consult these documents to get a sense of how the major package functions figure into an elementary course.</p>
+<p>There are also vignettes to guide students on the use of specific functions that appear frequently in an elementary course. Some vignettes cover functions from R’s <code>stats</code> package, others cover graphical functions from the <code>lattice</code> package (although when <code>tigerstats</code> is attached some of these, e.g., <code>histogram()</code> actually call package <code>mosaic</code> wrappers for the corresponding <code>lattice</code> function). Of course some vignettes also cover functions from <code>tigerstats</code> itself.</p>
+<p>Wrapper-functions in <code>tigerstats</code> always have names distinct from the function around which they wrap. For example, the <code>tigerstats</code> function for t-procedures is <code>ttestGC()</code>, not <code>t.test()</code>. Hence no function from <code>tigerstats</code> masks any other function from <code>stats</code>, <code>lattice</code>, or <code>mosaic</code>. Thus if you call, for example, <code>t.test()</code> when <code>tigerstats</code> is attached, you will get <code>mosaic</code>’s wrapper-function for the standard t-procedure function <code>t.test()</code> in R’s package <code>stats</code>.</p>
+<p>As in package <code>mosaic</code>, an attempt is made to provide a fairly uniform interface for all major functions:</p>
+<ul>
+<li>When one is examining a single factor or numeric variable <strong>var</strong> from a data frame <code>myData</code>, the general format is:</li>
+</ul>
+<p><span class="math">\[function(\sim var, data=myData,\ldots)\]</span></p>
+<ul>
+<li>When studying the relationship between a numerical variable <strong>num</strong> and a factor variable <strong>fac</strong>, the format is:</li>
+</ul>
+<p><span class="math">\[function(num \sim fac, data=myData,\ldots)\]</span></p>
+<ul>
+<li>When studying the relationship between two factor variables <strong>fac1</strong> and <strong>fac2</strong>, the format is:</li>
+</ul>
+<p><span class="math">\[function(\sim fac1 + fac2, data=myData,\ldots)\]</span></p>
+<p>This last format is in analogy with the formula interface used by R’s <code>xtabs()</code> function, e.g.,</p>
+<pre class="sourceCode r"><code class="sourceCode r"><span class="kw">xtabs</span>(~sex+seat,<span class="dt">data=</span>m111survey)</code></pre>
+<pre><code>##         seat
+## sex      1_front 2_middle 3_back
+##   female      19       16      5
+##   male         8       16      7</code></pre>
+<ul>
+<li>When studying the relationship between two numerical variables <strong>y</strong> and <strong>x</strong>, the format is:</li>
+</ul>
+<p><span class="math">\[function(y \sim x, data=myData,\ldots)\]</span></p>
+<p>In any of the above cases, if the <code>data</code> argument is not supplied or if a variable is not found in <code>data</code>, then it will be searched for on a path that begins with the environment in which the function was called (typically the Global Environment, if the function is being used interactively). In particular, not every variable in the formula has to be present in the data frame that is typically supplied to <code>data</code>. This mimics the behavior of R’s <code>stats</code> functions.</p>
+</div>
+<div id="getting-help" class="section level1">
+<h1>Getting Help</h1>
+<p>Students meet the functions first in class or while reading Course Notes or studying slides associated with the course. As they become more familiar with the functions they are encouraged to used help features to refresh their memory quickly. As is typical with Help pages in an R package, the help for functions is often more helpful to an instructor or a developer than to a student. On the other hand, the examples for the major functions are intended to be fairly comprehensive, so calling <code>example()</code> for a particular <code>tigerstats</code> function is likely to be useful.</p>
+<p>Students and instructors who desire a more extended refresher or a tutorial that covers most of the common uses of a given function should consult the vignette for that function. If you know the name of the function you are interested in, then you can access the vignette quickly using <code>helpGC()</code>, thus:</p>
+<pre class="sourceCode r"><code class="sourceCode r"><span class="kw">helpGC</span>(bwplot)</code></pre>
+<p>or</p>
+<pre class="sourceCode r"><code class="sourceCode r"><span class="kw">helpGC</span>(ttestGC)</code></pre>
+</div>
+<div id="applets" class="section level1">
+<h1>Applets</h1>
+<p><code>tigerstats</code> includes a number of instructional applets.</p>
+<div id="shiny-apps" class="section level2">
+<h2>Shiny Apps</h2>
+<p>Some of the applets are Shiny apps:</p>
+<ul>
+<li><code>CentralLiimit</code>: an exploration of the Central Limit Theorem.</li>
+<li><code>CIMean</code>: exploration of the coverage properties of t-interval for one population mean , when the standard deviation of the population is unknown.</li>
+<li><code>CoinFlip</code>: an exploration of inference in a binomial situation that can be used to introduce hypothesis testing early in a course.</li>
+<li><code>FindRegLine</code>: yet another game in which one tries to approximate the regression line. Score is kept.</li>
+<li><code>RandomExpBinom</code>: an exploration of a randomized experiments with two treatment groups, in which the response is Bernoulli. This can be used to explore inference as soon as randomized experimental designs are introduced in class.</li>
+<li><code>SamplingMethods</code>: This allows students to distinguish visually between simple random sampling, stratified sampling, and cluster sampling.</li>
+<li><code>ShallowReg</code>: Sometimes when students see a scatter plot that is based on a random sample from a bi-variate normal distribution, they comment that the regression line for the data looks “too shallow.” This app attempts to explain why the regression line is the preferred line for predicting <span class="math">\(y\)</span>-values from <span class="math">\(x\)</span>-values, even though the “SD line” (the line passing through <span class="math">\((\bar{x},\bar{y})\)</span> and having slope <span class="math">\(s_y/s_x\)</span>) sometimes appears to be the line that best summarizes the scatter plot.</li>
+<li><code>SlowGoodness</code>: This app introduces students to the chi-square test for goodness of fit.</li>
+<li><code>Type12Errors</code>: Exploration of Type-I and Type-II errors, in the context of inference for one population mean when the standard deviation is unknown.</li>
+</ul>
+<p>Any of the above apps may be run locally, using the <code>shiny</code> package that is installed along with <code>tigerstats</code>. For example, to run <code>SlowGoodness</code> simply type:</p>
+<pre class="sourceCode r"><code class="sourceCode r">shiny::<span class="kw">runApp</span>(<span class="kw">system.file</span>(<span class="st">&quot;CIMean&quot;</span>,<span class="dt">package=</span><span class="st">&quot;tigerstats&quot;</span>))</code></pre>
+<p>In classroom settings one is often using the server version of the R Studio IDE. In this case, depending on how permissions are set by the sysadmin, it may not be possible to run Shiny apps locally. In that case you should install the apps on a Shiny server for remote access. Obtain the source code for the apps from the <code>inst</code> directory of the <code>tigerstats</code> package on Git Hub:</p>
+<p><a href="https://github.com/homerhanumat/tigerstats"><a href="https://github.com/homerhanumat/tigerstats">https://github.com/homerhanumat/tigerstats</a></a>.</p>
+</div>
+<div id="manipulate-apps" class="section level2">
+<h2>Manipulate Apps</h2>
+<p>Some other apps make use of the <code>manipulate</code> package that comes with R Studio, and can only be run in this environment. Some of the apps most likely to be used are:</p>
+<ul>
+<li><code>BinomNorm()</code> and <code>BinomSkew()</code> for exploring the binomial family of distributions;</li>
+<li><code>CIMean()</code> is a manipulate alternative to the Shiny app of the same name</li>
+<li><code>CIProp()</code> explores coverage properties for confidence intervals for a single proportion</li>
+<li><code>DtrellHist()</code> and <code>DtrellScat()</code> provide a dynamic form of trellis-graphics, for exploration of data conditioned upon the values of a external variable.</li>
+<li><code>EmpRule()</code> helps students understand when the 68-95 Rule can be trusted, and when it cannot.</li>
+<li><code>EmpRuleGC()</code> is a graphical calculator for the 68-95 Rule. Some students find it amusing to be able to use it.</li>
+<li><code>FindRegLine()</code> is the poor man’s version of the Shiny app of the same name.</li>
+<li><code>MeanSampler()</code> is a poor man’s version of the Shiny app <code>CIMean</code>.</li>
+<li><code>SlowGoodness()</code> is the poor man’s version of the Shiny app of the same name.</li>
+<li><code>Type12Errors()</code> is the poor man’s version of the Shiny app of the same name.</li>
+</ul>
+</div>
+<div id="other-apps" class="section level2">
+<h2>Other Apps</h2>
+<p>The function <code>ChisqSimSlow()</code> is used to introduce the chi-square test for association between two factor variables. It does not require package <code>manipulate</code>.</p>
+</div>
+</div>
+<div id="general-reference" class="section level1">
+<h1>General Reference</h1>
+<p><code>mosaic</code> and <code>tigerstats</code> are used to teach elementary statistics at Georgetown College. The elementary course at Georgetown serves a dual purpose, as a recommended option for fulfilling the general education mathematics requirement and as a service course for several majors. Many of the course materials are online at:</p>
+<p><a href="http://statistics.georgetowncollege.edu"><a href="http://statistics.georgetowncollege.edu">http://statistics.georgetowncollege.edu</a></a></p>
+<p>The reader may wish to consult this website, especially the Course Notes, to see how <code>mosaic</code> and <code>tigerstats</code> support the selection and arrangement of topics that are particular to this course.</p>
+</div>
+
+
+
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+  (function () {
+    var script = document.createElement("script");
+    script.type = "text/javascript";
+    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    document.getElementsByTagName("head")[0].appendChild(script);
+  })();
+</script>
+
+</body>
+</html>
